--- a/backend/.env
+++ b/backend/.env
@@ -16,12 +16,19 @@ JWT_SECRET=charity_foundation_secret_key_2026_secure_token_xyz
 JWT_EXPIRES_IN=7d
 
 # Telegram Bot Configuration
-TELEGRAM_BOT_TOKEN=
-TELEGRAM_CHAT_ID=
+TELEGRAM_BOT_TOKEN=8545710424:AAGp1h5B5vCzs0t0rD9VQ3rWWq5HqJWvH_8
+
+TELEGRAM_CHAT_ID=8437872333
 
 # Frontend URL
-FRONTEND_URL=http://0:0:0:0:3000
+FRONTEND_URL=http://0.0.0.0:3000
 
 # File Upload Settings
 MAX_FILE_SIZE=5242880
 UPLOAD_PATH=./uploads
+
+# Email Configuration (Nodemailer)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=subhasris126@gmail.com
+SMTP_PASS=ifls psrr geeh arce
